fixing segment width it was too big in lg screens

--- a/TakuAcademy-Frontend/src/components/navbar/navbar.css
+++ b/TakuAcademy-Frontend/src/components/navbar/navbar.css
@@ -1,5 +1,4 @@
 .navbar {
-  margin: auto;
   background-color: #2c1f4a;
   z-index: 1;
 }
